# myengine

./: .gitignore  CMakeLists.txt  Doxyfile
Other Documents/: references.txt
Submission/: GEPBenBReport.docx  GEPUML.dia  GEPUML.dia~
Submission/Game/: README.txt  myengine.lib  rend.lib
Submission/Game/assests/shaders/: simpleDepthVertShader.txt  vertShader.txt
html/: _camera_8h_source.html  _component_8h_source.html  _core_8h_source.html  _entity_8h_source.html  _model_8h_source.html  _resource_8h_source.html  _resources_8h_source.html  _sound_8h_source.html  _sound_source_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _triangle_renderer_8h_source.html  annotated.html  classes.html  dir_0ddde275324c43d8035a84ca42e35f4e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  index.html  myengine_8h_source.html  struct_c_r_cscan-members.html  struct_c_r_cscan.html  struct_codebook-members.html  struct_codebook.html  struct_floor0-members.html  struct_floor0.html  struct_floor1-members.html  struct_floor1.html  struct_mapping-members.html  struct_mapping.html  struct_mapping_channel-members.html  struct_mapping_channel.html  struct_mode-members.html  struct_mode.html  struct_probed_page-members.html  struct_probed_page.html  struct_residue-members.html  (+39 more)
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_3.js  related_0.js  searchdata.js
latex/: __features_8hpp_source.tex  __fixes_8hpp_source.tex  __noise_8hpp_source.tex  __swizzle_8hpp_source.tex  __swizzle__func_8hpp_source.tex  __vectorize_8hpp_source.tex  _animation_8h_source.tex  _atomic_8h_source.tex  _buffer_8h_source.tex  _camera_8h_source.tex  _component_8h_source.tex  _core_8h_source.tex  _entity_8h_source.tex  _exception_8h_source.tex  _file_8h_source.tex  _list_8h_source.tex  _lock_8h_source.tex  _mesh_8h_source.tex  _model_8h_source.tex  _model_renderer_8h_source.tex  _mutex_8h_source.tex  _pipe_8h_source.tex  _private_8h_source.tex  _ptr_8h_source.tex  _render_texture_8h_source.tex  _renderer_8h_source.tex  _resource_8h_source.tex  _resources_8h_source.tex  _shader_8h_source.tex  _sound_8h_source.tex  _sound_source_8h_source.tex  _string_8h_source.tex  _texture_8h_source.tex  _thread_pool_8h_source.tex  _transform_8h_source.tex  _triangle_renderer_8h_source.tex  _unique_8h_source.tex  _vector_8h_source.tex  _weak_8h_source.tex  _zero_8h_source.tex  (+995 more)
src/assests/shaders/: fragShader.txt
src/game/: gameStructs.cpp  gameStructs.h  main.cpp
src/myengine/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Model.cpp  Model.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  RigidBody.cpp  RigidBody.h  Sound.cpp  Sound.h  SoundSource.cpp  SoundSource.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  myengine.h
src/rend/: Mesh.h  Shader.h
